--- a/packages/canopee-css/src/prospect-client/Link/LinkLF.css
+++ b/packages/canopee-css/src/prospect-client/Link/LinkLF.css
@@ -1,6 +1,7 @@
 @import "./LinkCommon.css";
 
 .af-link {
+  --link-font-weight: 400;
   --link-font-size: var(--rem-16);
 
   @media (--desktop-small) {
@@ -12,4 +13,8 @@
       --link-line-height: var(--rem-24);
     }
   }
+}
+
+.af-link--openInNewTab {
+  --link-font-weight: 600;
 }
